ecmascript/parser/tests/test262-error-references/fail/c1a24e62e6724892.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/c1a24e62e6724892.js:1:11
  |
1 | ({*a({e: a.b}){}})
  |           ^

